# resum-coherent

./: .copilotignore  .gitignore  README.md  coherent2_environment.yml  coherent_environment.yml  pyproject.toml  resum2.yaml
__MACOSX/LF_Simulation/: ._neutron-sim-LF-v1.4-0232-tier3.csv
examples/: cnp_training_resum_test.ipynb  conditional_neural_process_predict.ipynb  conditional_neural_process_shap.ipynb  conditional_neural_process_testing.ipynb  conditional_neural_process_training.ipynb  mf_polynomial_chaos_expansion.ipynb  multi_fidelity_gaussian_process.ipynb  multi_fidelity_polynomial_chaos_expansion.ipynb
examples/L1000NC/: settings.yaml
examples/binary-black-hole/: .gitignore  analyse_data.ipynb  binary_black_hole_example.ipynb  conditional_neural_process_training.ipynb  settings.yaml
examples/coherent/: README.md  Simulation parameters.xlsx  inequalities.py  preprocess_data.py  settings.yaml  settings_newdata.yaml
examples/legend-neutron-moderator/: inequalities.py  settings.yaml
examples/resum_test/: settings.yaml
examples/run_cnp/: cnp_predict_hf.py  cnp_training_coherent.py  conditional_neural_process_predict.ipynb  conditional_neural_process_predict_coherent.ipynb  conditional_neural_process_shap_coherent.ipynb  conditional_neural_process_training.ipynb  conditional_neural_process_training_coherent.ipynb
examples/run_mfgp/: example_usage.py  mfgp_analyzer.py  mfgp_test.ipynb  multi_fidelity_gaussian_process.ipynb  multi_fidelity_gaussian_process_coherent.ipynb  sonata_mfgp.ipynb  sonata_mfgp.py
examples/run_pce/: backup.ipynb  (+3 more)
(+35 files in other folders)
